[gd_scene load_steps=12 format=3 uid="uid://bok8v1br3e0vy"]

[ext_resource type="Script" path="res://Game_Data/UI_Scenes/ATBeatButton.gd" id="1_s4nqe"]
[ext_resource type="PackedScene" uid="uid://deqhn48lsgbxx" path="res://Game_Data/UI_Scenes/at_beat_bar.tscn" id="2_elpdl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bn44"]
bg_color = Color(0.145098, 0.219608, 0.145098, 1)
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.145098, 0.219608, 0.145098, 1)
corner_radius_top_left = 664
corner_radius_top_right = 267
corner_radius_bottom_right = 91
corner_radius_bottom_left = 831
corner_detail = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abadf"]
bg_color = Color(0.172549, 1, 0.396078, 0.635294)
border_width_left = 16
border_width_top = 10
border_color = Color(0.615686, 0.929412, 0.768627, 1)
corner_radius_top_left = 154
corner_radius_top_right = 96
corner_radius_bottom_right = 161
corner_radius_bottom_left = 347
corner_detail = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yv3h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogvql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gb53n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7nb0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pr6er"]

[sub_resource type="InputEventKey" id="InputEventKey_4f83r"]
device = -1
keycode = 75
unicode = 107

[sub_resource type="Shortcut" id="Shortcut_0st7r"]
events = [SubResource("InputEventKey_4f83r")]

[node name="Skill" type="BoxContainer"]
anchors_preset = -1
anchor_left = 19.2
anchor_top = 9.6
anchor_right = 28.8
anchor_bottom = 16.2
offset_left = -22118.4
offset_top = -6220.8
offset_right = -33015.6
offset_bottom = -10438.6
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.693, 0.693)
focus_mode = 1
mouse_default_cursor_shape = 1
theme_override_constants/separation = -1
script = ExtResource("1_s4nqe")
metadata/_edit_group_ = true

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_5bn44")

[node name="Panel" type="PanelContainer" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_abadf")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
mouse_default_cursor_shape = 1

[node name="Button" type="Button" parent="Panel/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.67451, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxEmpty_5yv3h")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ogvql")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb53n")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_u7nb0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pr6er")
shortcut = SubResource("Shortcut_0st7r")
text = "  -SKILL"
metadata/_edit_group_ = true

[node name="Node2D" type="Node2D" parent="."]

[node name="ATBeatBar" parent="Node2D" instance=ExtResource("2_elpdl")]

[connection signal="pressed" from="Panel/MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="broken" from="Node2D/ATBeatBar" to="." method="_on_at_beat_bar_broken"]
[connection signal="empty" from="Node2D/ATBeatBar" to="." method="_on_at_beat_bar_empty"]
[connection signal="full" from="Node2D/ATBeatBar" to="." method="_on_at_beat_bar_full"]
